# linkedinhacker

./: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  vercel.json
app/: globals.css  layout.tsx  lib-client.ts  lib-diff.ts  page.tsx
app/api/ai/draft/: route.ts
app/api/ai/hooks/: route.ts
app/api/ai/plan/: route.ts
app/api/ai/suggest/: route.ts
app/api/analytics/: route.ts
app/api/auth/callback/: route.ts
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/browser-tasks/: route.ts
app/api/browser-tasks/[id]/: route.ts
app/api/console/: route.ts
app/api/cron/publish/: route.ts
app/api/dashboard/: route.ts
app/api/engagements/: route.ts
app/api/engagements/[id]/: route.ts
app/api/me/: route.ts
app/api/metrics/: route.ts
app/api/posts/: route.ts
app/api/posts/[id]/: route.ts
app/api/targets/: route.ts
app/api/targets/[id]/: route.ts
app/api/templates/: route.ts
app/api/voice/: route.ts
app/capture/: page.tsx
app/components/: Analytics.tsx  BatchEngage.tsx  Calendar.tsx  Cockpit.tsx  Compose.tsx  Console.tsx  Dashboard.tsx  Engage.tsx  HumanizeReview.tsx  Posts.tsx  TellHint.tsx  Voice.tsx
humanizer/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
humanizer/humanizer/: __init__.py  cli.py  config.py  diff.py  engine.py  ingest.py  retrieval.py  store.py
humanizer/tests/: test_offline.py
lib/: ai.ts  api-helpers.ts  db.ts  linkedin.ts  publisher.ts  session.ts  templates.ts
scripts/: browser-agent.ts  init-db.ts  worker.ts
(+4 files in other folders)
