[project]
name = "humanizer"
version = "0.1.0"
description = "Train on your own writing and rewrite/generate anything in your voice, using Claude."
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.69.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]

[project.scripts]
humanizer = "humanizer.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["humanizer"]
